# Pro-Git-Q-A

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
data/corpus/: README.md
src/observability/: trace.py
src/pipeline/: cache.py  rag.py  routing.py  tools.py
src/ui/: streamlit_app.py
tests/: test_smoke.py
